--- a/index.html
+++ b/index.html
@@ -9,41 +9,61 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
     <title>Ottergram</title>
-    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <header>
-      <h1>Ottergram</h1>
+      <h1 class="logo__text">Ottergram</h1>
     </header>
-    <ul>
-      <li>
+    <ul class="thumbnail__list">
+      <li class="thumbnail__item">
         <a href="#">
-          <img src="img/otter1.jpg" alt="Barry the otter" />
+          <img
+            class="thumbnail__image"
+            src="img/otter1.jpg"
+            alt="Barry the otter"
+          />
           <span class="thumbnail__title">Barry</span>
         </a>
       </li>
-      <li>
+      <li class="thumbnail__item">
         <a href="#">
-          <img src="img/otter2.jpg" alt="Robin the otter" />
+          <img
+            class="thumbnail__image"
+            src="img/otter2.jpg"
+            alt="Robin the otter"
+          />
           <span class="thumbnail__title">Robin</span>
         </a>
       </li>
-      <li>
+      <li class="thumbnail__item">
         <a href="#">
-          <img src="img/otter3.jpg" alt="Maurice the otter" />
+          <img
+            class="thumbnail__image"
+            src="img/otter3.jpg"
+            alt="Maurice the otter"
+          />
           <span class="thumbnail__title">Maurice</span>
         </a>
       </li>
-      <li>
+      <li class="thumbnail__item">
         <a href="#">
-          <img src="img/otter4.jpg" alt="Lesley the otter" />
+          <img
+            class="thumbnail__image"
+            src="img/otter4.jpg"
+            alt="Lesley the otter"
+          />
           <span class="thumbnail__title">Lesley</span>
         </a>
       </li>
-      <li>
+      <li class="thumbnail__item">
         <a href="#">
-          <img src="img/otter5.jpg" alt="Barbara the otter" />
+          <img
+            class="thumbnail__image"
+            src="img/otter5.jpg"
+            alt="Barbara the otter"
+          />
           <span class="thumbnail__title">Barbara</span>
         </a>
       </li>
