change layout with flex box  and position

--- a/index.html
+++ b/index.html
@@ -13,60 +13,120 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="main__header">
       <h1 class="logo__text">Ottergram</h1>
     </header>
-    <ul class="thumbnail__list">
-      <li class="thumbnail__item">
-        <a href="#">
-          <img
-            class="thumbnail__image"
-            src="img/otter1.jpg"
-            alt="Barry the otter"
-          />
-          <span class="thumbnail__title">Barry</span>
-        </a>
-      </li>
-      <li class="thumbnail__item">
-        <a href="#">
-          <img
-            class="thumbnail__image"
-            src="img/otter2.jpg"
-            alt="Robin the otter"
-          />
-          <span class="thumbnail__title">Robin</span>
-        </a>
-      </li>
-      <li class="thumbnail__item">
-        <a href="#">
-          <img
-            class="thumbnail__image"
-            src="img/otter3.jpg"
-            alt="Maurice the otter"
-          />
-          <span class="thumbnail__title">Maurice</span>
-        </a>
-      </li>
-      <li class="thumbnail__item">
-        <a href="#">
-          <img
-            class="thumbnail__image"
-            src="img/otter4.jpg"
-            alt="Lesley the otter"
-          />
-          <span class="thumbnail__title">Lesley</span>
-        </a>
-      </li>
-      <li class="thumbnail__item">
-        <a href="#">
-          <img
-            class="thumbnail__image"
-            src="img/otter5.jpg"
-            alt="Barbara the otter"
-          />
-          <span class="thumbnail__title">Barbara</span>
-        </a>
-      </li>
-    </ul>
+    <main class="main__content">
+      <ul class="thumbnail__list">
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter1.jpg"
+              alt="Barry the otter"
+            />
+            <span class="thumbnail__title">Barry</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter2.jpg"
+              alt="Robin the otter"
+            />
+            <span class="thumbnail__title">Robin</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter3.jpg"
+              alt="Maurice the otter"
+            />
+            <span class="thumbnail__title">Maurice</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter4.jpg"
+              alt="Lesley the otter"
+            />
+            <span class="thumbnail__title">Lesley</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter5.jpg"
+              alt="Barbara the otter"
+            />
+            <span class="thumbnail__title">Barbara</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter1.jpg"
+              alt="Barry the otter"
+            />
+            <span class="thumbnail__title">Barry</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter2.jpg"
+              alt="Robin the otter"
+            />
+            <span class="thumbnail__title">Robin</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter3.jpg"
+              alt="Maurice the otter"
+            />
+            <span class="thumbnail__title">Maurice</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter4.jpg"
+              alt="Lesley the otter"
+            />
+            <span class="thumbnail__title">Lesley</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter5.jpg"
+              alt="Barbara the otter"
+            />
+            <span class="thumbnail__title">Barbara</span>
+          </a>
+        </li>
+      </ul>
+      <div class="detail__image-container">
+        <div class="detail__image-frame">
+          <img src="img/otter1.jpg" alt="" class="detail__image" />
+          <span class="detail__image-title">
+            Stayin' Alive
+          </span>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
