using js for event handling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
     <main class="main__content">
       <ul class="thumbnail__list">
         <li class="thumbnail__item">
-          <a href="#">
+          <a
+            href="img/otter1.jpg"
+            data-image-role="trigger"
+            data-image-title="Stayin' Alive"
+            data-image-url="img/otter1.jpg"
+          >
             <img
               class="thumbnail__image"
               src="img/otter1.jpg"
@@ -29,7 +34,12 @@
           </a>
         </li>
         <li class="thumbnail__item">
-          <a href="#">
+          <a
+            href="img/otter2.jpg"
+            data-image-role="trigger"
+            data-image-title="How Deep Is Your Love"
+            data-image-url="img/otter2.jpg"
+          >
             <img
               class="thumbnail__image"
               src="img/otter2.jpg"
@@ -39,7 +49,12 @@
           </a>
         </li>
         <li class="thumbnail__item">
-          <a href="#">
+          <a
+            href="img/otter3.jpg"
+            data-image-role="trigger"
+            data-image-title="You Should Be Dancing"
+            data-image-url="img/otter3.jpg"
+          >
             <img
               class="thumbnail__image"
               src="img/otter3.jpg"
@@ -49,7 +64,12 @@
           </a>
         </li>
         <li class="thumbnail__item">
-          <a href="#">
+          <a
+            href="img/otter4.jpg"
+            data-image-role="trigger"
+            data-image-title="Night Fever"
+            data-image-url="img/otter4.jpg"
+          >
             <img
               class="thumbnail__image"
               src="img/otter4.jpg"
@@ -59,7 +79,12 @@
           </a>
         </li>
         <li class="thumbnail__item">
-          <a href="#">
+          <a
+            href="img/otter5.jpg"
+            data-image-role="trigger"
+            data-image-title="To Love Somebody"
+            data-image-url="img/otter5.jpg"
+          >
             <img
               class="thumbnail__image"
               src="img/otter5.jpg"
@@ -121,12 +146,124 @@
       </ul>
       <div class="detail__image-container">
         <div class="detail__image-frame">
-          <img src="img/otter1.jpg" alt="" class="detail__image" />
-          <span class="detail__image-title">
+          <img
+            src="img/otter1.jpg"
+            alt=""
+            data-image-role="target"
+            class="detail__image"
+          />
+          <span class="detail__image-title" data-image-role="title">
             Stayin' Alive
           </span>
         </div>
       </div>
+      <!-- for practice -->
+      <!-- <ul class="thumbnail__list thumbnail__nav">
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter1.jpg"
+              alt="Barry the otter"
+            />
+            <span class="thumbnail__title">Barry</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter2.jpg"
+              alt="Robin the otter"
+            />
+            <span class="thumbnail__title">Robin</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter3.jpg"
+              alt="Maurice the otter"
+            />
+            <span class="thumbnail__title">Maurice</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter4.jpg"
+              alt="Lesley the otter"
+            />
+            <span class="thumbnail__title">Lesley</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter5.jpg"
+              alt="Barbara the otter"
+            />
+            <span class="thumbnail__title">Barbara</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter1.jpg"
+              alt="Barry the otter"
+            />
+            <span class="thumbnail__title">Barry</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter2.jpg"
+              alt="Robin the otter"
+            />
+            <span class="thumbnail__title">Robin</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter3.jpg"
+              alt="Maurice the otter"
+            />
+            <span class="thumbnail__title">Maurice</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter4.jpg"
+              alt="Lesley the otter"
+            />
+            <span class="thumbnail__title">Lesley</span>
+          </a>
+        </li>
+        <li class="thumbnail__item">
+          <a href="#">
+            <img
+              class="thumbnail__image"
+              src="img/otter5.jpg"
+              alt="Barbara the otter"
+            />
+            <span class="thumbnail__title">Barbara</span>
+          </a>
+        </li>
+      </ul> -->
     </main>
+    <!-- <footer class="main__footer">
+      <h1 class="footer__text">Ottergram</h1>
+    </footer> -->
+    <script src="js/main.js" charset="UTF-8"></script>
   </body>
 </html>
