--- a/index.html
+++ b/index.html
@@ -93,59 +93,9 @@
             <span class="thumbnail__title">Barbara</span>
           </a>
         </li>
-        <li class="thumbnail__item">
-          <a href="#">
-            <img
-              class="thumbnail__image"
-              src="img/otter1.jpg"
-              alt="Barry the otter"
-            />
-            <span class="thumbnail__title">Barry</span>
-          </a>
-        </li>
-        <li class="thumbnail__item">
-          <a href="#">
-            <img
-              class="thumbnail__image"
-              src="img/otter2.jpg"
-              alt="Robin the otter"
-            />
-            <span class="thumbnail__title">Robin</span>
-          </a>
-        </li>
-        <li class="thumbnail__item">
-          <a href="#">
-            <img
-              class="thumbnail__image"
-              src="img/otter3.jpg"
-              alt="Maurice the otter"
-            />
-            <span class="thumbnail__title">Maurice</span>
-          </a>
-        </li>
-        <li class="thumbnail__item">
-          <a href="#">
-            <img
-              class="thumbnail__image"
-              src="img/otter4.jpg"
-              alt="Lesley the otter"
-            />
-            <span class="thumbnail__title">Lesley</span>
-          </a>
-        </li>
-        <li class="thumbnail__item">
-          <a href="#">
-            <img
-              class="thumbnail__image"
-              src="img/otter5.jpg"
-              alt="Barbara the otter"
-            />
-            <span class="thumbnail__title">Barbara</span>
-          </a>
-        </li>
       </ul>
       <div class="detail__image-container">
-        <div class="detail__image-frame">
+        <div class="detail__image-frame" data-image-role="frame">
           <img
             src="img/otter1.jpg"
             alt=""
